[gd_scene load_steps=2 format=3 uid="uid://84m1vp5m0v2n"]

[ext_resource type="Script" uid="uid://b4aa6x7k5aura" path="res://scenes/map/map_area_detector.gd" id="1_q14i5"]

[node name="MapAreaDetector" type="Area2D"]
script = ExtResource("1_q14i5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
